--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -14,7 +14,7 @@
   justify-content: space-between;
   align-items: center;
   height: 70px;
-  
+  width: 1100px;
 }
 .navbar__img{
     width: 250px;
@@ -58,4 +58,96 @@
     background-color: #22b3c1;
     border: 0;
     color: #fff;
+}
+
+@media(max-width:1100px){
+    .container{
+        width: 1000px;
+    }
+}
+@media(max-width:1020px){
+    .container{
+        width: 900px;
+    }
+    .navbar__container{
+        max-width: 900px;
+    }
+}
+@media(max-width:920px){
+    .container{
+        width: 800px;
+    }
+    .navbar__container{
+        max-width: 800px;
+    }
+    .navbar__img{
+        width: 150px;
+    }
+}
+@media(max-width:820px){
+    .container{
+        width: 700px;
+    }
+    .navbar__container{
+        max-width: 700px;
+    }
+    .navbar__img{
+        width: 100px;
+    }
+}
+@media(max-width:720px){
+    .container{
+        width: 600px;
+    }
+    .navbar__container{
+        max-width: 600px;
+    }
+    .navbar__img{
+        width: 100px;
+    }
+    .navbar__list{
+        display: none;
+    }
+}
+@media(max-width:620px){
+    .container{
+        width: 500px;
+    }
+    .navbar__container{
+        max-width: 500px;
+    }
+    .navbar__img{
+        width: 100px;
+    }
+    .navbar__list{
+        display: none;
+    }
+}
+@media(max-width:520px){
+    .container{
+        width: 400px;
+    }
+    .navbar__container{
+        max-width: 400px;
+    }
+    .navbar__img{
+        width: 100px;
+    }
+    .navbar__list{
+        display: none;
+    }
+}
+@media(max-width:420px){
+    .container{
+        width: 300px;
+    }
+    .navbar__container{
+        max-width: 300px;
+    }
+    .navbar__img{
+        width: 100px;
+    }
+    .navbar__list{
+        display: none;
+    }
 }
