--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .container{
-    width: 1000px;
+    width: 1100px;
     margin: 0 auto;
     padding: 0;
     font-family: sans-serif;
@@ -12,3 +12,12 @@
 html{
     scroll-behavior: smooth;
 }
+
+
+
+  
+/* @media( max-width:920px){
+    .container{
+        max-width: 800px;
+    }
+} */
