--- a/src/Components/Ending/Ending.css
+++ b/src/Components/Ending/Ending.css
@@ -1,6 +1,7 @@
 
 .ending__container{
     padding-bottom: 60px;
+    width: 1100px;
 }
 .ending__title{
     color: #2A2A2A;
@@ -51,3 +52,113 @@
     margin: 0 auto;
     align-items: center;
 }
+
+.ending__btn:hover{
+    color: #22B3C1;
+    background-color: #fff;
+    border:  1px solid #22B3C1;
+ }
+ @media(max-width:1100px){
+    .container{
+        width: 1000px;
+    }
+  }
+  @media(max-width:1020px){
+    .container{
+        width: 900px;
+    }
+   .ending__container{
+    width: 900px;
+   }
+  
+  }
+  @media(max-width:920px){
+    .container{
+        width: 800px;
+    }
+   .ending__container{
+     max-width: 800px;
+   }
+  
+  }
+  @media(max-width:820px){
+    .container{
+        width: 700px;
+    }
+   .ending__container{
+     max-width: 700px;
+   }
+  
+  }
+  @media(max-width:720px){
+    .container{
+        width: 600px;
+    }
+   .ending__container{
+     max-width: 600px;
+   }
+   .ending__form{
+    width: 500px;
+   }
+   .ending__input{
+    width: 500px;
+   }
+   .ending__select{
+     width: 500px;
+   }
+  
+  }
+  @media(max-width:620px){
+    .container{
+        width: 500px;
+    }
+   .ending__container{
+     max-width: 500px;
+   }
+   .ending__form{
+    width: 400px;
+   }
+   .ending__input{
+    width: 400px;
+   }
+   .ending__select{
+     width: 400px;
+   }
+  
+  }
+  @media(max-width:520px){
+    .container{
+        width: 400px;
+    }
+   .ending__container{
+     max-width: 400px;
+   }
+   .ending__form{
+    width: 300px;
+   }
+   .ending__input{
+    width: 300px;
+   }
+   .ending__select{
+     width: 300px;
+   }
+  
+  }
+  @media(max-width:420px){
+    .container{
+        width: 300px;
+    }
+   .ending__container{
+     max-width: 300px;
+   }
+   .ending__form{
+    width: 200px;
+   }
+   .ending__input{
+    width: 200px;
+   }
+   .ending__select{
+     width: 200px;
+   }
+  
+  }
