--- a/src/Components/Explore/Explore.css
+++ b/src/Components/Explore/Explore.css
@@ -2,7 +2,7 @@
 
 .explore__container{
    padding-top: 50px;
-   
+   width: 1100px;
 }
 .explore__boxone{
     width:850px;
@@ -48,6 +48,11 @@
     background-color: #22B3C1;
     color: #fff;
 }
+.explore__btn:hover{
+    color: #22B3C1;
+    background-color: #fff;
+    border:  1px solid #22B3C1;
+ }
 .explore__text__name{
     padding: 10px 0px;
    color: #AFAFAF;
@@ -71,3 +76,292 @@
     color: #22B3C1;
     text-decoration: none;
 }
+
+@media(max-width:1100px){
+    .container{
+        width: 1000px;
+    }
+  }
+  @media(max-width:1020px){
+    .container{
+        width: 900px;
+    }
+   .explore__container{
+    max-width: 900px;
+   }
+  
+  }
+  @media(max-width:920px){
+    .container{
+        width: 800px;
+    }
+   .explore__container{
+    max-width: 800px;
+   }
+   .explore__wrapper{
+    width: 500px;
+   }
+   .explore__boxone{
+     width: 800px;
+   }
+   .explore__boxtext{
+    width: 500px;
+   }
+   .explore__text{
+    width: 500px;
+   }
+   .explore__boxtoo{
+    width: 800px;
+   }
+  
+  }
+  @media(max-width:820px){
+    .container{
+        width: 700px;
+    }
+   .explore__container{
+    max-width: 700px;
+   }
+   .explore__title{
+    text-align: center;
+    width: 500px;
+    margin: 0 auto ;
+   }
+   .explore__text{
+     max-width: 500px;
+     text-align: center;
+     margin: 0 auto;
+   }
+   .explore__wrapper{
+    width: 500px;
+    text-align: center;
+    margin: 0 auto;
+   }
+   .explore__img{
+    width: 500px;
+    height: 300px;
+    margin: 0px auto;
+   }
+   .explore__boxone{
+     width: 700px;
+     display: flex;
+    flex-direction: column;
+   }
+   .explore__boxtext{
+    width: 500px;
+    padding-top: 40px;
+
+   }
+   .explore__text{
+    width: 600px;
+   }
+   .explore__boxtoo{
+     max-width: 700px;
+     display: flex;
+     flex-direction: column;
+   }
+  
+  }
+  @media(max-width:720px){
+    .container{
+        width: 600px;
+    }
+   .explore__container{
+    max-width: 600px;
+   }
+   .explore__title{
+    width: 500px;
+   }
+   .explore__text{
+     max-width: 500px;
+   }
+   .explore__wrapper{
+    width: 500px;
+   }
+   .explore__img{
+    width: 500px;
+    height: 300px;
+   }
+   .explore__boxone{
+     width: 600px;
+     display: flex;
+    flex-direction: column;
+   }
+   .explore__boxtext{
+    width: 500px;
+    padding-top: 40px;
+
+   }
+   .explore__text{
+    width: 500px;
+   }
+   .explore__boxtoo{
+     max-width: 600px;
+     display: flex;
+     flex-direction: column;
+   }
+  
+  }
+  @media(max-width:620px){
+    .container{
+        width: 500px;
+    }
+   .explore__container{
+    max-width: 500px;
+   }
+   .explore__title{
+    width: 450px;
+   }
+   .explore__title__name{
+    width: 250px;
+   }
+   .explore__text{
+     max-width: 450px;
+   }
+   .explore__wrapper{
+    width: 500px;
+   }
+   .explore__img{
+    width: 400px;
+    height: 300px;
+   }
+   .explore__boxone{
+     width: 500px;
+     display: flex;
+    flex-direction: column;
+   }
+   .explore__boxtext{
+    margin: 0 auto;
+    width: 450px;
+    padding-top: 40px;
+
+   }
+   .explore__text{
+    width: 500px;
+   }
+   .explore__boxtoo{
+     max-width: 500px;
+     display: flex;
+     flex-direction: column;
+   }
+   .explore__ending{
+    width: 400px;
+    text-align: center;
+    margin: 0 auto;
+   }
+  
+  }
+  @media(max-width:520px){
+    .container{
+        width: 400px;
+    }
+   .explore__container{
+    max-width: 400px;
+   }
+   .explore__title{
+    width: 350px;
+   }
+   .explore__title__name{
+    width: 300px;
+   }
+   .explore__text{
+     max-width: 350px;
+   }
+   .explore__btn{
+    margin: 0 auto;
+    width: 320px;
+   }
+   .explore__wrapper{
+    width: 400px;
+   }
+   .explore__img{
+    width: 300px;
+    height: 200px;
+   }
+   .explore__boxone{
+     width: 400px;
+     display: flex;
+    flex-direction: column;
+   }
+   .explore__boxtext{
+    margin: 0 auto;
+    width: 350px;
+    padding-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+   margin: 0 auto;
+
+   }
+
+   .explore__text{
+    width: 400px;
+   }
+   .explore__boxtoo{
+     max-width: 400px;
+     display: flex;
+     flex-direction: column;
+   }
+   .explore__ending{
+    width: 300px;
+    text-align: center;
+    margin: 0 auto;
+   }
+  
+  }
+  @media(max-width:420px){
+    .container{
+        width: 300px;
+    }
+   .explore__container{
+    max-width: 300px;
+   }
+   .explore__title{
+    width: 250px;
+   }
+   .explore__title__name{
+    width: 200px;
+   }
+   .explore__text{
+     max-width: 250px;
+   }
+   .explore__btn{
+    margin: 0 ;
+    width: 220px;
+   }
+   .explore__wrapper{
+    width: 300px;
+   }
+   .explore__img{
+    width: 260px;
+    height: 200px;
+   }
+   .explore__boxone{
+     width: 300px;
+     display: flex;
+    flex-direction: column;
+   }
+   .explore__boxtext{
+    margin: 0 auto;
+    width: 250px;
+    padding-top: 40px;
+    display: flex;
+    flex-wrap: wrap;
+   margin: 0 auto;
+
+   }
+
+   .explore__text{
+    width: 300px;
+   }
+   .explore__boxtoo{
+     max-width: 300px;
+     display: flex;
+     flex-direction: column;
+   }
+   .explore__ending{
+    width: 300px;
+    text-align: center;
+    margin: 0 auto;
+   }
+  
+  }
