--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,6 +2,9 @@
     background-color: #22B3C1;
     padding: 80px 0px;
 }
+.footer__container{
+    width: 1100px;
+}
 .footer__box{
     display: flex;
     justify-content: space-between;
@@ -35,3 +38,74 @@
     color: #22B3C1;
     background-color: #fff;
 }
+
+
+@media(max-width:1100px){
+    .container{
+        width: 1000px;
+    }
+  }
+  @media(max-width:1020px){
+    .container{
+        width: 900px;
+    }
+    .footer__container{
+        max-width: 900px;
+    }
+  }
+  @media(max-width:920px){
+    .container{
+        width: 800px;
+    }
+    .footer__container{
+      max-width: 800px;
+    }
+  }
+  @media(max-width:820px){
+    .container{
+        width: 700px;
+    }
+    .footer__container{
+      max-width: 700px;
+    }
+  }
+  @media(max-width:720px){
+    .container{
+        width: 600px;
+    }
+    .footer__container{
+      max-width: 600px;
+    }
+  }
+  @media(max-width:620px){
+    .container{
+        width: 500px;
+    }
+    .footer__container{
+      max-width: 500px;
+    }
+  }
+  @media(max-width:520px){
+    .container{
+        width: 400px;
+    }
+    .footer__container{
+      max-width: 400px;
+    }
+.footer__box{
+    display: flex;
+    flex-wrap: wrap;
+}
+  }
+  @media(max-width:420px){
+    .container{
+        width: 300px;
+    }
+    .footer__container{
+      max-width: 300px;
+    }
+.footer__box{
+    display: flex;
+    flex-wrap: wrap;
+}
+  }
