--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -57,10 +57,8 @@
     margin: 0 auto;
 }
 .header__btn:hover{
-    background:linear-gradient(black, blue,  red);
-   
-    transform: scale(0.8);
-    transition: 0.3;
+   color: #22B3C1;
+   background-color: #fff;
 }
 .header__boxtop{
     padding-bottom: 150px;
@@ -96,3 +94,162 @@
   a{
     text-decoration: none;
   }
+
+ 
+  @media(max-width:1100px){
+    .container{
+        width: 1000px;
+    }
+}
+@media(max-width:1020px){
+    .container{
+        width: 900px;
+    }
+    .header__container{
+
+    }
+    .header__box{
+      position: absolute;
+      right: 0;
+      bottom: 50px;
+      right: 150px;
+      z-index: 1;
+    }
+
+  }
+
+  @media(max-width:920px){
+    .container{
+        width: 800px;
+    }
+     .header__box{
+      right: 100px;
+     }
+  }
+  @media(max-width:820px){
+    .container{
+        width: 700px;
+    }
+     .header__box{
+      right: 60px;
+     }
+  }
+  @media(max-width:720px){
+    .container{
+        width: 600px;
+    }
+     .header__box{
+      right: 50px;
+     }
+     .header__list{
+      width: 500px;
+     }
+     .header__item{
+      width: 160px;
+     }
+     .header__img{
+      width: 30px;
+     }
+     .header__item__text{
+      font-size: 14px;
+     }
+     .header__item__title{
+      font-size: 14px;
+     }
+  }
+  @media(max-width:620px){
+    .container{
+        width: 500px;
+    }
+     .header__box{
+      bottom: 20px;
+      right: 30px;
+     }
+     .header__list{
+      width: 400px;
+       display: flex;
+       flex-wrap: wrap;
+       gap: 20px;
+     }
+     .header__item{
+      width: 160px;
+     }
+     .header__img{
+      width: 30px;
+     }
+     .header__item__text{
+      font-size: 14px;
+     }
+     .header__item__title{
+      font-size: 14px;
+     }
+  }
+  @media(max-width:520px){
+    .container{
+        width: 400px;
+    }
+     .header__box{
+      height: 300px;
+      bottom: 150px;
+      right: 30px;
+     }
+     .header__boxtop{
+      padding: 20px;
+     }
+     .header__list{
+      width: 300px;
+       gap: 20px;
+       margin: 0 auto;
+     }
+     .header__item{
+      width: 160px;
+     }
+     .header__img{
+      width: 30px;
+     }
+     .header__item__text{
+      font-size: 14px;
+     }
+     .header__item__title{
+      font-size: 14px;
+     }
+  }
+  @media(max-width:420px){
+    .container{
+        width: 300px;
+    }
+     .header__box{
+      height: 200px;
+      bottom: 280px;
+      right: 0px;
+     }
+     .header__text{
+      width: 250px;
+      line-height: 30px;
+     }
+     .header__boxtop{
+      padding: 20px;
+     }
+     .header__list{
+      width: 200px;
+       gap: 20px;
+       margin: 0 auto;
+     }
+     .header__item{
+      width: 160px;
+     }
+     .header__img{
+      width: 30px;
+     }
+     .header__item__text{
+      font-size: 14px;
+     }
+     .header__item__title{
+      font-size: 14px;
+     }
+  }
+
+ 
+ 
+ 
+ 
