--- a/src/Components/Location/Location.css
+++ b/src/Components/Location/Location.css
@@ -1,5 +1,7 @@
 
-
+.location__container{
+    width: 1100px;
+}
 .location__title{
     color: #2A2A2A;
     font-size: 30px;
@@ -23,3 +25,80 @@
 .swipper__img{
     border-radius: 20px;
 }
+@media(max-width:1100px){
+    .container{
+        width: 1000px;
+    }
+  }
+  @media(max-width:1020px){
+    .container{
+        width: 900px;
+    }
+   .location__container{
+    max-width: 900px;
+   }
+  
+  }
+  @media(max-width:920px){
+    .container{
+        width: 800px;
+    }
+   .location__container{
+    max-width: 800px;
+   }
+  
+  }
+  @media(max-width:820px){
+    .container{
+        width: 700px;
+    }
+   .location__container{
+    max-width: 700px;
+   }
+  
+  }
+  @media(max-width:720px){
+    .container{
+        width: 600px;
+    }
+   .location__container{
+    max-width: 600px;
+   }
+  
+  }
+  @media(max-width:620px){
+    .container{
+        width: 500px;
+    }
+   .location__container{
+    max-width: 500px;
+   }
+   .location__text{
+    width: 400px;
+   }
+  
+  }
+  @media(max-width:520px){
+    .container{
+        width: 400px;
+    }
+   .location__container{
+    max-width: 400px;
+   }
+   .location__text{
+    width: 300px;
+   }
+  
+  }
+  @media(max-width:420px){
+    .container{
+        width: 300px;
+    }
+   .location__container{
+    max-width: 300px;
+   }
+   .location__text{
+    width: 200px;
+   }
+  
+  }
