--- a/src/Components/Make/Make.css
+++ b/src/Components/Make/Make.css
@@ -13,8 +13,8 @@
 }
 .make__list{
     position: absolute;
-   top: 280px;
-    right: 100px;
+    top: 280px;
+    right: 150px;
     margin: 0 auto;
     width: 800px;
    display: flex;
@@ -45,3 +45,154 @@
     display: flex;
     justify-content: center;
 }
+
+@media(max-width:1100px){
+    .container{
+        width: 1000px;
+    }
+  }
+  @media(max-width:1020px){
+    .container{
+        width: 900px;
+    }
+    .make__list{
+        top: 250px;
+        right: 50px;
+        margin: 0 auto;
+        width: 800px;
+    }
+  
+  }
+  @media(max-width:920px){
+    .container{
+        width: 800px;
+    }
+    .make__list{
+        max-width: 700px;
+        top: 220px;
+        right: 60px;
+        margin: 0 auto;
+        width: 800px;
+    }
+    .make__item{
+        width: 210px;
+        height: 200px;
+    }
+  
+  }
+  @media(max-width:820px){
+    .container{
+        width: 700px;
+    }
+    .make__list{
+        max-width: 700px;
+        top: 200px;
+        right: 60px;
+        margin: 0 auto;
+    }
+    .make__item{
+        width: 210px;
+        height: 200px;
+    }
+  
+  }
+  @media(max-width:720px){
+    .container{
+        width: 600px;
+    }
+    .make__list{
+        gap: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 600px;
+        top: 160px;
+        right: 0px;
+        margin: 0 auto;
+    }
+    .make__item{
+        width: 230px;
+        height: 200px;
+    }
+  
+  }
+  @media(max-width:620px){
+    .container{
+        width: 500px;
+    }
+    .make__list{
+        gap: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 400px;
+        top: 130px;
+        right: 0px;
+        margin: 0 auto;
+        left: 0px;
+        right:10px;
+    }
+    .make__item{
+        width: 190px;
+        height: 200px;
+    }
+  
+  }
+  @media(max-width:520px){
+    .container{
+        width: 400px;
+    }
+    .make__list{
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 350px;
+        top: 110px;
+        right: 0px;
+        margin: 0 auto;
+        left: 0px;
+        right:10px;
+    }
+    .make__item{
+        gap: 10px;
+        width: 150px;
+        height: 130px;
+    }
+    .make__img{
+        width: 30px;
+    }
+    .make__title{
+        font-size: 12px;
+    }
+    .make__link{
+        font-size: 12px;
+    }
+  
+  }
+  @media(max-width:420px){
+    .container{
+        width: 300px;
+    }
+    .make__list{
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 250px;
+        top: 110px;
+        right: 0px;
+        margin: 0 auto;
+        left: 0px;
+        right:10px;
+    }
+    .make__item{
+        gap: 10px;
+        width: 150px;
+        height: 130px;
+    }
+    .make__img{
+        width: 30px;
+    }
+    .make__title{
+        font-size: 12px;
+    }
+    .make__link{
+        font-size: 12px;
+    }
+  
+  }
