--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -64,6 +64,9 @@
     .container{
         width: 1000px;
     }
+    .modal__icon{
+        display: none;
+    }
 }
 @media(max-width:1020px){
     .container{
@@ -71,6 +74,9 @@
     }
     .navbar__container{
         max-width: 900px;
+    }
+    .modal__icon{
+        display: none;
     }
 }
 @media(max-width:920px){
@@ -83,6 +89,9 @@
     .navbar__img{
         width: 150px;
     }
+    .modal__icon{
+        display: none;
+    }
 }
 @media(max-width:820px){
     .container{
@@ -93,6 +102,9 @@
     }
     .navbar__img{
         width: 100px;
+    }
+    .modal__icon{
+        display: none;
     }
 }
 @media(max-width:720px){
@@ -107,6 +119,9 @@
     }
     .navbar__list{
         display: none;
+    }
+    .modal__icon{
+        display: block;
     }
 }
 @media(max-width:620px){
