--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -7,14 +7,19 @@
     height: 100%;
     gap: 30px;
     padding: 30px;
+    position: relative;
 }
 .modal__item{
     list-style: none;
     padding: 10px;
     border-bottom: 1px solid #bbb;
+   
 }
 .modal__link{
+    font-family: sans-serif;
     font-size: 24px;
+     text-decoration: none;
+     color:#22b3c1;
 }
 .modal__box{
     padding: 30px;
@@ -31,4 +36,23 @@
 .modal__option{
     width: 50px;
     font-size: 12px;
+}
+.modal__x{
+    list-style: none;
+    padding-bottom: 30px;
+}
+.modal__btn{
+    width: 50px;
+    height: 30px;
+    font-size: 20px;
+    background-color:#22b3c1 ;
+    border: 0;
+    color: #fff;
+    border-radius: 10px;
+   position: absolute;
+   right: 20px;
+   top: 20px;
+}
+.modal__btn:hover{
+    background-color: red;
 }
