--- a/src/Components/Make/Make.css
+++ b/src/Components/Make/Make.css
@@ -1,26 +1,68 @@
 
 
 .make{
-    background: url(../../assets/img/make.png);
-    background-size: 100%;
-    height: 400px;
-    background-repeat: no-repeat;
-  
+  position: relative;
+}
+.make__metro{
+   width: 100%;
+   opacity: 0.7;
 }
 .make__container{
     margin-top: 30px; 
-    position: relative; 
+    position: absolute;
+    top: 100px;
+    left: 50px;
+   
+    
+}
+.make__text{
+    text-align: center;
+    font-size: 30px;
+    color: #fff;
+}
+.make__title__name{
+    color: #fff;
+    font-size: 60px;
+    padding-top: 20px;
+    padding-bottom: 100px;
+    text-align: center;
+}
+.make__link__name{
+    width: 200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    padding: 20px 25px;
+    border-radius: 20px;
+    text-align:center ;
+    background-color: #22B3C1;
+}
+.make__link__name:hover{
+    color: #22B3C1;
+    background-color: #fff;
+}
+.make__icon{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 0;
 }
 .make__list{
-    position: absolute;
+    /* position: absolute;
     top: 280px;
-    right: 100px;
     margin: 0 auto;
+    left: 0;
+    right: 0; */
     width: 800px;
+    padding-top: 100px;
+    text-align: center;
+    margin: 0 auto;
    display: flex;
    justify-content: space-between;
 }
 .make__item{
+    text-align: center;
     list-style: none;
     width: 250px;
     padding: 20px;
@@ -34,11 +76,7 @@
     font-size: 20px;
     text-align: center;
 }
-.make__img{
-    width: 60px;
-    display: flex;
-    margin: 0 auto;
-}
+
 .make__link{
     text-decoration: none;
     color: #22B3C1;
@@ -55,11 +93,9 @@
     .container{
         width: 900px;
     }
-    .make__list{
-        top: 250px;
-        right: 50px;
-        margin: 0 auto;
-        width: 800px;
+    .make__container{
+        top: 60px;
+        left: 30px;
     }
   
   }
@@ -67,12 +103,16 @@
     .container{
         width: 800px;
     }
-    .make__list{
+    .make__container{
         max-width: 700px;
-        top: 220px;
-        right: 60px;
-        margin: 0 auto;
-        width: 800px;
+        top: 50px;
+        right: 0px;
+    }
+    .make__list{
+        width: 700px;
+    }
+    .make{
+        padding-bottom: 200px;
     }
     .make__item{
         width: 210px;
@@ -84,11 +124,17 @@
     .container{
         width: 700px;
     }
+    .make__container{
+    }
+   .make__text{
+    font-size: 20px;
+   }
+   .make__title__name{
+    font-size: 30px;
+    padding-bottom: 30px;
+   }
     .make__list{
         max-width: 700px;
-        top: 200px;
-        right: 60px;
-        margin: 0 auto;
     }
     .make__item{
         width: 210px;
@@ -102,15 +148,12 @@
     }
     .make__list{
         gap: 20px;
-        display: flex;
         flex-wrap: wrap;
         max-width: 600px;
-        top: 160px;
-        right: 0px;
         margin: 0 auto;
     }
     .make__item{
-        width: 230px;
+        width: 250px;
         height: 200px;
     }
   
@@ -124,15 +167,17 @@
         display: flex;
         flex-wrap: wrap;
         max-width: 400px;
-        top: 130px;
-        right: 0px;
         margin: 0 auto;
-        left: 0px;
-        right:10px;
+        padding-top: 30px;
+        
+    }
+    .make__container{
+        top: 0;
     }
     .make__item{
-        width: 190px;
+        width: 400px;
         height: 200px;
+        margin: 0 auto;
     }
   
   }
@@ -143,26 +188,28 @@
     .make__list{
         display: flex;
         flex-wrap: wrap;
-        max-width: 350px;
-        top: 110px;
-        right: 0px;
+        max-width: 300px;
+       
         margin: 0 auto;
-        left: 0px;
-        right:10px;
+       
     }
     .make__item{
         gap: 10px;
+        width: 280px;
+        height: 180px;
+    }
+    .make__link__name{
         width: 150px;
-        height: 130px;
+        font-size: 14px;
     }
     .make__img{
         width: 30px;
     }
     .make__title{
-        font-size: 12px;
+        font-size: 16px;
     }
     .make__link{
-        font-size: 12px;
+        font-size: 14px;
     }
   
   }
@@ -173,26 +220,39 @@
     .make__list{
         display: flex;
         flex-wrap: wrap;
-        max-width: 250px;
-        top: 110px;
-        right: 0px;
+        max-width: 300px;
         margin: 0 auto;
-        left: 0px;
-        right:10px;
+       
+    }
+    .make__container{
+        left: 0;
     }
     .make__item{
         gap: 10px;
-        width: 150px;
-        height: 130px;
+        width: 250px;
+        height: 160px;
     }
     .make__img{
         width: 30px;
     }
+    .make__text{
+        font-size: 16px;
+    }
+    .make__title__name{
+        font-size: 20px;
+    }
+    .make__link__name{
+        font-size: 14px;
+    }
+    .make__icon{
+        width: 40px;
+        height: 40px;
+    }
     .make__title{
-        font-size: 12px;
+        font-size: 16px;
     }
     .make__link{
-        font-size: 12px;
+        font-size: 14px;
     }
   
   }
