--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -29,7 +29,7 @@
 .modal__select{
     width: 100px;
     height: 50px;
-    text-align: center;
+    margin: 0 auto;
     font-size: 30px;
     box-shadow: 0px 1px 6px 0px;
 }
