--- a/src/Components/Explore/Explore.css
+++ b/src/Components/Explore/Explore.css
@@ -267,7 +267,7 @@
     text-align: center;
    }
    .explore__text{
-     max-width: 350px;
+     max-width: 100%;
    }
    .explore__btn{
     margin: 0 auto;
@@ -325,7 +325,7 @@
     text-align: center;
    }
    .explore__text{
-     max-width: 250px;
+     max-width: 100%;
    }
    .explore__btn{
     margin: 0 auto;
