--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -64,7 +64,7 @@
     border-radius: 20px;
     box-shadow: 0px 1px 10px 0px;
     position: absolute;
-    bottom: 50px;
+    bottom: 10px;
     right: 0;
     width: 250px;
     /* height: 350px; */
@@ -136,6 +136,9 @@
   .main__list{
     width: 290px;
   }
+  .main__text__name{
+    font-size: 16px;
+  }
 
 }
 @media(max-width:920px){
@@ -202,6 +205,10 @@
  .main__list{
   width: 300px;
   margin: 0 auto;
+ }
+ .main__item__name{
+  bottom: 0px;
+  right: -20px;
  }
  .main__text{
   width: 300px;
