--- a/src/Components/Support/Support.css
+++ b/src/Components/Support/Support.css
@@ -20,13 +20,13 @@
     color: #AFAFAF;
 }
 .support__list{
-    width: 320px;
+    width: 360px;
     height: 450px;
     position: relative;
 }
 .support__item{
-    width: 230px;
-    height: 150px;
+    width: 300px;
+    height: 220px;
     list-style: none;
 
 }
@@ -38,7 +38,7 @@
     position: absolute;
     list-style: none;
     
-    width: 280px;
+    width: 300px;
     padding: 25px;
     height: 400px;
     box-shadow: 0px 1px 10px 0px;
@@ -98,7 +98,8 @@
     width: 290px;
    }
    .support__item__name{
-    width: 260px;
+    width: 300px;
+    right: -60px;
    }
   
   }
@@ -112,9 +113,6 @@
    .support__list{
     width: 290px;
    }
-   .support__item__name{
-    width: 260px;
-   }
   
   }
   @media(max-width:820px){
@@ -126,9 +124,6 @@
    }
    .support__list{
     width: 350px;
-   }
-   .support__item__name{
-    width: 260px;
    }
   
   }
@@ -176,8 +171,11 @@
     width: 300px;
     margin: 0 auto;
    }
+   .support__title__name{
+        height: 60px;
+   }
    .support__item__name{
-    width: 260px;
+    width: 280px;
    }
    .support__text{
     width: 300px;
@@ -197,6 +195,10 @@
    }
    .support__item__name{
     width: 240px;
+    right: -10px;
+   }
+   .support__item{
+    width: 230px;
    }
    .support__text{
     width: 250px;
